@@ -41,7 +41,8 @@
  *   - ~ Segfault when filters were applied during dirlog update (-r -u) (rev. 16)
  *   - + Globally available accumulators; source data values can be added up and stored in these 
          variables, see under GLOBAL in DATA_STRUCTURES for descriptions (rev. 17)
- *   - + -mlist, list all available macros, support for descriptions embedded in macros (rev. 17)
+ *   - + -mlist - list all available macros, support for descriptions embedded in macros (rev. 17)
+ *   - % -mlist - optionally increase verbosity (rev. 17)
  *
  * v2.2:
  *
